# kdb-tickers

./: .gitignore  LICENSE  Makefile  README.md  run_system.sh
deployment/: DEPLOYMENT.md
deployment/config/: symbols.conf
deployment/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  supervisord.conf
deployment/scripts/: deploy-multi-symbol.sh
deployment/systemd/: install.sh  kdb-server.service  kdb-ticker.service  kdb-ticker.target  kdb-ticker@.service
docs/: websocket-client-example.html
scripts/: monitor.sh  run_tests.sh
src/q/: init.q  tick.q  tick_persist.q  websocket_server.q
src/q/analytics/: orderbook.q  performance.q  volatility.q  vwap.q
src/rust/: Cargo.toml
src/rust/src/: lib.rs  main.rs
src/rust/src/binance/: websocket.rs
src/rust/src/kdb/: client.rs
src/rust/src/models/: ticker.rs
tests/: test_analytics.q  test_init.q  test_integration.q  test_tick.q
